# insta_django

./: pyproject.toml
commons/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_followingnum.py
